--- a/notebooks/SectionLoci.ipynb
+++ b/notebooks/SectionLoci.ipynb
@@ -213,13 +213,13 @@
       "#============================================================\n",
       "\n",
       " geomTransf Linear  1   $vecxz1  $vecxz2  $vecxz3 \n",
+      "uniaxialMaterial Steel02  2  66800.0  29000000.0  0.005  18  0.925  0.15 \n",
       "uniaxialMaterial Concrete02  1  -4000.0  -0.003  -800.0  -0.01  0.1  560.0  280000.0 \n",
       "section FiberSection  1 -GJ 1000000.0  { \n",
-      "\tpatch quad  1   4  16    -30.000000000000004  18.000000000000004   -30.000000000000004  -18.000000000000004   30.000000000000004  -18.000000000000004   30.000000000000004  18.000000000000004 \n",
-      "\tlayer line  2  4  1.0    25.000000000000004  13.000000000000004   25.000000000000004  -13.000000000000004 \n",
-      "\tlayer line  2  4  1.0    -25.000000000000004  13.000000000000004   -25.000000000000004  -13.000000000000004 \n",
+      "\tpatch quad  1   16  4    18.000000000000004  -30.000000000000004   -18.000000000000004  -30.000000000000004   -18.000000000000004  30.000000000000004   18.000000000000004  30.000000000000004 \n",
+      "\tlayer line  2  4  1.0    13.000000000000004  25.000000000000004   -13.000000000000004  25.000000000000004 \n",
+      "\tlayer line  2  4  1.0    13.000000000000004  -25.000000000000004   -13.000000000000004  -25.000000000000004 \n",
       "} \n",
-      "uniaxialMaterial Steel02  2  66800.0  29000000.0  0.005  18  0.925  0.15 \n",
       "\n",
       "#============================================================\n",
       "# Assemblage\n",
@@ -229,7 +229,7 @@
       "node  2   0.0  10.0 -mass  0.0  0.0  0.0  0.0  0.0  0.0\n",
       "\n",
       "\n",
-      "element forceBeamColumn  1   1  2  1 Lobatto <FiberSection object at 0x7f0cc45bce50> 8 -mass 0.0\n",
+      "element forceBeamColumn  1   1  2  1 Lobatto <FiberSection object at 0x7f66cc6ae0e0> 8 -mass 0.0\n",
       "\n",
       "#============================================================\n",
       "# Constraints\n",
@@ -254,7 +254,7 @@
     {
      "data": {
       "text/plain": [
-       "<Concrete02 at 0x7f0cc463b6c0>"
+       "<Concrete02 at 0x7f66cc66f3c0>"
       ]
      },
      "execution_count": 10,
@@ -268,10 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "da901a8f-7f7a-4b95-9960-310d1a57099a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "-1.0312689655172411 [     0.         108911.11111111]\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
