--- a/notebooks/BackboneHandles.ipynb
+++ b/notebooks/BackboneHandles.ipynb
@@ -58,7 +58,7 @@
     "strain = linspace(-0.010, 0.010, 100)\n",
     "\n",
     "with backbone.Raynor(1, 29e6, 40e3, 70e3, Epsilonsh=0.002, Epsilonsm=0.015, C1=3, Ey=0.01*29e6) as b:\n",
-    "    plt.plot(strain, [b.getStress(e) for e in strain])"
+    "    plt.plot(strain, [b.getStress(e) for e in strain])\n"
    ]
   },
   {
