cmp - add Lst to ast, add TimeSeries

--- a/notebooks/UniaxialMaterialObjects.ipynb
+++ b/notebooks/UniaxialMaterialObjects.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "ax.legend()\n",
     "ax.set_xlabel(r\"$\\epsilon$\")\n",
-    "ax.set_ylabel(r\"$\\sigma$\")"
+    "ax.set_ylabel(r\"$\\sigma$\");"
    ]
   },
   {
