--- a/notebooks/UniaxialHysteresis.ipynb
+++ b/notebooks/UniaxialHysteresis.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "755a4aab-3af1-4a00-b5db-10da6db12358",
+   "execution_count": 1,
+   "id": "31548254-7c7a-4119-982e-ea78242310c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from numpy import sin, linspace, pi\n",
+    "from opensees import uniaxial\n",
+    "from opensees.units.english import ksi, psi, inch, ft\n",
+    "\n",
+    "plt.style.use(\"berkeley\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739de99f-ee5f-4885-81c7-d9e42397f573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with uniaxial.Hysteretic"
+   ]
   }
  ],
  "metadata": {
