--- a/notebooks/BackboneHandles.ipynb
+++ b/notebooks/BackboneHandles.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "A `HystereticBackbone` object exposes the following methods:\n",
     "\n",
-    "- `getStress(strain: float)`\n",
+    ">- `getStress(strain: float)`\n",
     "\n",
     "Unlike most component types in OpenSees, the `HystereticBackbone` represents a *bijective* mathematical relation, free of internal variables or state.\n",
     "\n",
