--- a/notebooks/UniaxialCompositeModels.ipynb
+++ b/notebooks/UniaxialCompositeModels.ipynb
@@ -90,8 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_a = uniaxial.Hardening(1, 15e3, fy=15., H_iso=0., H_kin=5e1)#*40e3/(40e3+5e3))\n",
-    "mat_b = uniaxial.ElasticBilin(2, 45e3, 1e2, 15/15e3)#*30e3/(30e3+5e2))"
+    "mat_a = uniaxial.Hardening(1, 15e3, fy=15., H_iso=0., H_kin=5e1)\n",
+    "mat_b = uniaxial.ElasticBilin(2, 45e3, 1e2, 15/15e3)"
    ]
   },
   {
@@ -118,10 +118,13 @@
     "\n",
     "with mat_a as m:\n",
     "    ax[0].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
-    "    \n",
+    "\n",
     "with mat_b as m:\n",
     "    ax[0].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
-    "    \n",
+    "\n",
+    "\n",
+    "# with mat_a as m:\n",
+    "#     ax[0].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
     "with uniaxial.Parallel(3, [mat_a, mat_b]) as m:\n",
     "    ax[1].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
     "\n",
@@ -164,8 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_a = uniaxial.Hardening(1, 40e3, fy=40., H_iso=0., H_kin=5e3)#*40e3/(40e3+5e3))\n",
-    "mat_b = uniaxial.Hardening(2, 30e3, fy=60., H_iso=0., H_kin=5e2)#*30e3/(30e3+5e2))"
+    "mat_a = uniaxial.Hardening(1, 40e3, fy=40., H_iso=0., H_kin=5e3)\n",
+    "mat_b = uniaxial.Hardening(2, 30e3, fy=60., H_iso=0., H_kin=5e2)"
    ]
   },
   {
@@ -255,11 +258,11 @@
     "    \n",
     "with mat_b as m:\n",
     "    ax[0].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
-    "    \n",
+    "\n",
     "with uniaxial.Series(3, [mat_a, mat_b]) as m:\n",
     "    ax[1].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
     "\n",
-    "    \n",
+    "\n",
     "ax[0].set_title(\"Component Models\")\n",
     "ax[1].set_title(\"Composite Model\")\n",
     "for a in ax:\n",
