--- a/notebooks/UniaxialPlasticityModels.ipynb
+++ b/notebooks/UniaxialPlasticityModels.ipynb
@@ -41,12 +41,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fy  = 66.8*ksi             # STEEL yield stress\n",
-    "Es  = 29000.*ksi           # modulus of steel\n",
-    "Bs  = 0.005                # strain-hardening ratio \n",
-    "R0  = 18                   # control the transition from elastic to plastic branches\n",
-    "cR1 = 0.925                # control the transition from elastic to plastic branches\n",
-    "cR2 = 0.15                 # control the transition from elastic to plastic branches"
+    "Fy  = 66.8*ksi     # steel yield stress\n",
+    "Es  = 29000.*ksi   # modulus of steel\n",
+    "Bs  = 0.005        # strain-hardening ratio \n",
+    "R0  = 18           # control the transition from elastic to plastic branches\n",
+    "cR1 = 0.925        # control the transition from elastic to plastic branches\n",
+    "cR2 = 0.15         # control the transition from elastic to plastic branches"
    ]
   },
   {
