cmp - add tag/id handling

--- a/notebooks/UniaxialMaterialObjects.ipynb
+++ b/notebooks/UniaxialMaterialObjects.ipynb
@@ -98,7 +98,14 @@
     "tags": []
    },
    "source": [
-    "## Steel"
+    "## Reinforcing Steel\n",
+    "\n",
+    "The following features are typically desired of a reinforcing steel model:\n",
+    "\n",
+    "- Bauschinger effect\n",
+    "- Low-cycle fatigue\n",
+    "- Buckling\n",
+    "- Hardening"
    ]
   },
   {
@@ -254,7 +261,7 @@
     "Ec = 57*ksi*sqrt(-fc/psi)  # Concrete Elastic Modulus\n",
     "\n",
     "# unconfined concrete\n",
-    "fc1U = fc                  # UNCONFINED concrete (todeschini parabolic model) maximum stress\n",
+    "fc1U = fc                  # unconfined concrete (todeschini parabolic model) maximum stress\n",
     "eps1U = -0.003             # strain at maximum strength of unconfined concrete\n",
     "fc2U = 0.2*fc1U            # ultimate stress\n",
     "eps2U = -0.01              # strain at ultimate stress\n",
@@ -442,8 +449,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_a = uniaxial.Hardening(1, 40e3, fy=40., H_iso=0., H_kin=5e3)\n",
-    "mat_b = uniaxial.Hardening(2, 30e3, fy=60., H_iso=0., H_kin=5e2)"
+    "mat_a = uniaxial.Hardening(None, 40e3, fy=40., H_iso=0., H_kin=5e3)\n",
+    "mat_b = uniaxial.Hardening(None, 30e3, fy=60., H_iso=0., H_kin=5e2)"
    ]
   },
   {
@@ -500,8 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_a = uniaxial.Hardening(1, 30e3, fy=60., H_iso=0., H_kin=1e2)\n",
-    "mat_b = uniaxial.ElasticBilin(2, 10.0, 30e3, 0.01)"
+    "mat_a = uniaxial.Hardening(None, 30e3, fy=60., H_iso=0., H_kin=1e2)\n",
+    "mat_b = uniaxial.ElasticBilin(None, 10.0, 30e3, 0.01)"
    ]
   },
   {
@@ -534,7 +541,7 @@
     "with mat_b as m:\n",
     "    ax[0].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
     "\n",
-    "with uniaxial.Series(3, [mat_a, mat_b]) as m:\n",
+    "with uniaxial.Series(None, [mat_a, mat_b]) as m:\n",
     "    ax[1].plot(strain, [m.getStress(e, commit=True) for e in strain])\n",
     "\n",
     "\n",
