--- a/notebooks/SectionConfinement.ipynb
+++ b/notebooks/SectionConfinement.ipynb
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f56268de9a0>"
+       "<matplotlib.collections.PathCollection at 0x7f0b26a35f40>"
       ]
      },
      "execution_count": 7,
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "309 µs ± 19.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "256 µs ± 2.65 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
