--- a/notebooks/TransientAnalysis.ipynb
+++ b/notebooks/TransientAnalysis.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import opensees\n",
     "import opensees.analysis\n",
-    "import opensees.pattern\n",
+    "# import opensees.pattern\n",
     "import quakeio.elcentro"
    ]
   },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b3a49686-c19c-49f8-bd19-7ecf6bff31ae",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b9baf881-3480-49c6-88a0-90a069cf2a02",
    "metadata": {},
    "outputs": [
@@ -256,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (elle)",
+   "display_name": "Mamba-39",
    "language": "python",
-   "name": "elle"
+   "name": "mamba-py39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
